objects/ttt_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>App_Id__c</fullName>
        <label>App Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Name__c</fullName>
        <label>App Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Token__c</fullName>
        <label>App Token</label>
        <type>TextArea</type>
    </fields>
    <label>Tquila Team Talk Settings</label>
</CustomObject>